basic layout design changes

--- a/src/app/layouts/master-layout/sidenav/sidenav.component.html
+++ b/src/app/layouts/master-layout/sidenav/sidenav.component.html
@@ -1,62 +1,50 @@
 <!-- Sidenav Start -->
 
-<nav class="main-menu">
+<nav class="main-menu has-shadow">
   <ul>
       <li>
         <a href="#">              
-            <fa-icon icon="list" size="2x"></fa-icon>              
+            <fa-icon icon="chart-bar" size="2x"></fa-icon>              
         </a>
       </li>
       <li >
         <a href="#">              
-            <fa-icon icon="list" size="2x"></fa-icon>              
+            <fa-icon icon="edit" size="2x"></fa-icon>              
         </a>
       </li>
       <li>
           <a href="#">              
-              <fa-icon icon="list" size="2x"></fa-icon>              
+              <fa-icon icon="file" size="2x"></fa-icon>              
           </a>
       </li>
       <li >
         <a href="#">              
-            <fa-icon icon="list" size="2x"></fa-icon>              
+            <fa-icon icon="user" size="2x"></fa-icon>              
         </a>
       </li>
       <li>
-          <a href="#">
-              <i class="nav-icon fa fa-bar-chart-o fa-2x"></i>
-              <span class="nav-text">
-                  Menus
-              </span>
-          </a>
+        <a href="#">              
+            <fa-icon icon="address-book" size="2x"></fa-icon>              
+        </a>
       </li>
       <li>
-          <a href="#">
-              <i class="nav-icon fa fa-font fa-2x"></i>
-              <span class="nav-text">
-                  Inventory
-              </span>
-          </a>
+        <a href="#">              
+            <fa-icon icon="book" size="2x"></fa-icon>              
+        </a>
       </li>
       <li>
-          <a href="#">
-              <i class="nav-icon fa fa-table fa-2x"></i>
-              <span class="nav-text">
-                  Reports
-              </span>
-          </a>
+        <a href="#">              
+            <fa-icon icon="file-invoice" size="2x"></fa-icon>              
+        </a>
       </li>
 
   </ul>
 
   <ul class="logout">
       <li>
-          <a href="#">
-              <i class="nav-icon fa fa-setting fa-2x"></i>
-              <span class="nav-text">
-                  Settings
-              </span>
-          </a>
+        <a href="#">              
+            <fa-icon icon="sign-out-alt" size="2x"></fa-icon>              
+        </a>
       </li>
   </ul>
 </nav>
