--- a/src/app/layouts/master-layout/master-layout.component.html
+++ b/src/app/layouts/master-layout/master-layout.component.html
@@ -1,66 +1,13 @@
 <div class="columns">
-  <div class="column is-1 is-hidden-mobile" style="z-index:1000;width: 100px;">
+  <div class="column is-1 is-hidden-mobile" style="z-index:1000;width: 75px;">
 
     <app-sidenav></app-sidenav>
 
   </div>
 
   <div class="column page-content" >
-
-      <nav class="navbar" role="navigation" aria-label="main navigation">
-          <div class="navbar-brand">
-              <!-- <a class="navbar-item" href="#">
-                  <img src="Ico.jpg" width="112" height="40">
-              </a> -->
-  
-              <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-                  data-target="navbarBasicExample">
-                  <span aria-hidden="true"></span>
-                  <span aria-hidden="true"></span>
-                  <span aria-hidden="true"></span>
-              </a>
-          </div>
-  
-          <div id="navbarBasicExample" class="navbar-menu">
-              <div class="navbar-start">
-                  <div class="navbar-item">
-                      <h3 class="page-title">Dashboard</h3>
-                  </div>
-  
-              </div>
-  
-              <div class="navbar-end">
-                  <div class="navbar-item">
-                      <div id="avatar"></div>
-  
-                      <div class="dropdown is-hoverable" style="margin-right: 20px;">
-                          <div class="dropdown-trigger">
-                              <button class="button" style="border-style: none;" aria-haspopup="true"
-                                  aria-controls="dropdown-menu4">
-                                  <span>Shrikant Gond</span>
-                                  <!-- <span class="icon is-small">
-                                      <i class="fas fa-angle-down" aria-hidden="true"></i>
-                                  </span> -->
-                                  <div style="padding-left:5px;">
-                                    <!-- <fa-icon [icon]="faCoffee"></fa-icon> -->
-                                    <!-- <fa-icon icon="asterisk" size="3x" [spin]="true"></fa-icon> -->
-                                    <fa-icon icon="caret-down"></fa-icon>
-                                  </div>
-                              </button>
-                          </div>
-                          <div class="dropdown-menu" id="dropdown-menu4" role="menu">
-                              <div class="dropdown-content">
-                                  <div class="dropdown-item">
-                                      <p>You can insert <strong>any type of content</strong> within the dropdown menu.</p>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </nav>
-
+      
+      <app-topnav></app-topnav>
       <!-- <section class="section"> -->
       <!-- <div class="container">  -->
 
@@ -85,7 +32,7 @@
                       <div class="columns is-mobile is-centered">
                           <div class="column">^ +6% </div>
                           <div class="column has-text-right ">
-                              <a class="button is-rounded">White</a>
+                              <a class="button is-rounded is-small">White</a>
                           </div>
                       </div>
                   </div>
@@ -101,7 +48,7 @@
                       <div class="columns is-mobile is-centered">
                           <div class="column">^ +6% </div>
                           <div class="column has-text-right ">
-                              <a class="button is-rounded">White</a>
+                              <a class="button is-rounded is-small">White</a>
                           </div>
                       </div>
                   </div>
@@ -116,7 +63,7 @@
                       <div class="columns is-mobile is-centered">
                           <div class="column">^ +6% </div>
                           <div class="column has-text-right ">
-                              <a class="button is-rounded">White</a>
+                              <a class="button is-rounded is-small">White</a>
                           </div>
                       </div>
                   </div>
@@ -131,7 +78,7 @@
                       <div class="columns is-mobile is-centered">
                           <div class="column">^ +6% </div>
                           <div class="column has-text-right ">
-                              <a class="button is-rounded">White</a>
+                              <a class="button is-rounded is-small">White</a>
                           </div>
                       </div>
                   </div>
@@ -149,7 +96,7 @@
                           <p class="subtitle">Order Chart</p>
                       </div>
                       <div class="column has-text-right ">
-                          <a class="button is-rounded">White</a>
+                          <a class="button is-rounded is-small">White</a>
                       </div>
                   </div>
               </div>
@@ -169,7 +116,7 @@
                                   <p class="subtitle">Payment Summery</p>
                               </div>
                               <div class="column has-text-right ">
-                                  <a class="button is-rounded">White</a>
+                                  <a class="button is-rounded is-small">White</a>
                               </div>
                           </div>
                       </div>
@@ -189,7 +136,7 @@
                                   <p class="subtitle">Order Status</p>
                               </div>
                               <div class="column has-text-right ">
-                                  <a class="button is-rounded">White</a>
+                                  <a class="button is-rounded is-small">White</a>
                               </div>
                           </div>
                       </div>
@@ -214,7 +161,7 @@
                                   <p class="subtitle">Top Selling</p>
                               </div>
                               <div class="column has-text-right ">
-                                  <a class="button is-rounded">White</a>
+                                  <a class="button is-rounded is-small">White</a>
                               </div>
                           </div>
                       </div>
@@ -280,7 +227,7 @@
                                   <p class="subtitle">Inventory Status</p>
                               </div>
                               <div class="column has-text-right ">
-                                  <a class="button is-rounded">White</a>
+                                  <a class="button is-rounded is-small">White</a>
                               </div>
                           </div>
                       </div>
@@ -298,31 +245,31 @@
                                   <td>Tea Powder</td>
                                   <td><progress class="progress is-danger" value="25" max="100">25%</progress>
                                   </td>
-                                  <td><a class="button is-rounded is-info ">Send Requisition</a></td>
+                                  <td><a class="button is-rounded is-small is-info ">Send Requisition</a></td>
                               </tr>
                               <tr>
                                   <td>Sugar</td>
                                   <td><progress class="progress is-warning" value="45" max="100">45%</progress>
                                   </td>
-                                  <td><a class="button is-rounded" disabled>Send Requisition</a></td>
+                                  <td><a class="button is-rounded is-small" disabled>Send Requisition</a></td>
                               </tr>
                               <tr>
                                   <td>Salt</td>
                                   <td><progress class="progress is-warning" value="55" max="100">55%</progress>
                                   </td>
-                                  <td><a class="button is-rounded" disabled>Send Requisition</a></td>
+                                  <td><a class="button is-rounded is-small" disabled>Send Requisition</a></td>
                               </tr>
                               <tr>
                                   <td>White Bread</td>
                                   <td><progress class="progress is-danger" value="35" max="100">75%</progress>
                                   </td>
-                                  <td><a class="button is-rounded is-info ">Send Requisition</a></td>
+                                  <td><a class="button is-rounded is-small is-info ">Send Requisition</a></td>
                               </tr>
                               <tr>
                                   <td>Green Chilli Powder</td>
                                   <td><progress class="progress is-success" value="75" max="100">75%</progress>
                                   </td>
-                                  <td><a class="button is-rounded" disabled>Send Requisition</a></td>
+                                  <td><a class="button is-rounded is-small" disabled>Send Requisition</a></td>
                               </tr>
 
                           </tbody>
