--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-master-layout></app-master-layout>
+<router-outlet></router-outlet>
 
