UI changes with Basic routing with lazy loading

--- a/src/app/layouts/master-layout/sidenav/sidenav.component.html
+++ b/src/app/layouts/master-layout/sidenav/sidenav.component.html
@@ -3,46 +3,51 @@
 <nav class="main-menu has-shadow">
   <ul>
       <li>
-        <a href="#">              
+        <a href="#/dashboard">              
             <fa-icon icon="chart-bar" size="2x"></fa-icon>              
         </a>
       </li>
       <li >
-        <a href="#">              
+        <a href="#/orders">              
             <fa-icon icon="edit" size="2x"></fa-icon>              
         </a>
       </li>
       <li>
-          <a href="#">              
+          <a href="#/bills">              
               <fa-icon icon="file" size="2x"></fa-icon>              
           </a>
       </li>
       <li >
-        <a href="#">              
+        <a href="#/menus">              
             <fa-icon icon="user" size="2x"></fa-icon>              
         </a>
       </li>
       <li>
-        <a href="#">              
+        <a href="#/inventory">              
             <fa-icon icon="address-book" size="2x"></fa-icon>              
         </a>
       </li>
       <li>
-        <a href="#">              
+        <a href="#/customers">              
             <fa-icon icon="book" size="2x"></fa-icon>              
         </a>
       </li>
       <li>
-        <a href="#">              
+        <a href="#/help">              
             <fa-icon icon="file-invoice" size="2x"></fa-icon>              
         </a>
       </li>
+      <li>
+          <a href="#/reports">              
+              <fa-icon icon="file-invoice" size="2x"></fa-icon>              
+          </a>
+        </li>
 
   </ul>
 
   <ul class="logout">
       <li>
-        <a href="#">              
+        <a href="#/settings">              
             <fa-icon icon="sign-out-alt" size="2x"></fa-icon>              
         </a>
       </li>
