--- a/src/app/layouts/master-layout/topnav/topnav.component.html
+++ b/src/app/layouts/master-layout/topnav/topnav.component.html
@@ -35,7 +35,7 @@
           <div class="navbar-item">
               <div id="avatar"></div>
 
-              <div class="dropdown is-hoverable" style="margin-right: 20px;">
+              <div class="dropdown is-hoverable is-right" style="margin-right: -10px;">
                   <div class="dropdown-trigger">
                       <button class="button" style="border-style: none;" aria-haspopup="true"
                           aria-controls="dropdown-menu4">
