--- a/src/app/modules/dashboard/pages/inventory-status/inventory-status.component.html
+++ b/src/app/modules/dashboard/pages/inventory-status/inventory-status.component.html
@@ -1,3 +1,69 @@
-<p>
-  inventory-status works!
-</p>
+<div class="box">
+    <div class="content">
+      <div class="heading">
+        <div class="columns is-mobile is-centered">
+          <div class="column">
+            <p class="subtitle">Inventory Status</p>
+          </div>
+          <div class="column has-text-right ">
+            <a class="button is-rounded is-small">White</a>
+          </div>
+        </div>
+      </div>
+
+      <table class="table is-hoverable is-fullwidth">
+        <thead>
+          <tr>
+            <th>Inventory</th>
+            <th>Progress</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Tea Powder</td>
+            <td><progress class="progress is-danger" value="25" max="100">25%</progress>
+            </td>
+            <td><a class="button is-rounded is-small is-info ">Send Requisition</a></td>
+          </tr>
+          <tr>
+            <td>Sugar</td>
+            <td><progress class="progress is-warning" value="45" max="100">45%</progress>
+            </td>
+            <td><a class="button is-rounded is-small" disabled>Send Requisition</a></td>
+          </tr>
+          <tr>
+            <td>Salt</td>
+            <td><progress class="progress is-warning" value="55" max="100">55%</progress>
+            </td>
+            <td><a class="button is-rounded is-small" disabled>Send Requisition</a></td>
+          </tr>
+          <tr>
+            <td>White Bread</td>
+            <td><progress class="progress is-danger" value="35" max="100">75%</progress>
+            </td>
+            <td><a class="button is-rounded is-small is-info ">Send Requisition</a></td>
+          </tr>
+          <tr>
+            <td>Green Chilli Powder</td>
+            <td><progress class="progress is-success" value="75" max="100">75%</progress>
+            </td>
+            <td><a class="button is-rounded is-small" disabled>Send Requisition</a></td>
+          </tr>
+
+        </tbody>
+      </table>
+
+      <nav class="pagination is-rounded" role="navigation" aria-label="pagination">
+        <a class="pagination-previous">Previous</a>
+        <a class="pagination-next">Next page</a>
+        <ul class="pagination-list" style="margin-top:-.5rem;">
+          <li><a class="pagination-link" aria-label="Goto page 1">1</a></li>
+          <li><span class="pagination-ellipsis">&hellip;</span></li>
+          <li><a class="pagination-link is-current" aria-label="Page 46" aria-current="page">46</a></li>
+        </ul>
+      </nav>
+
+
+    </div>
+  </div>
