--- a/src/app/modules/dashboard/pages/order-status-chart/order-status-chart.component.html
+++ b/src/app/modules/dashboard/pages/order-status-chart/order-status-chart.component.html
@@ -1,3 +1,15 @@
-<p>
-  order-status-chart works!
-</p>
+<div class="box">
+    <div class="content">
+      <div class="heading">
+        <div class="columns is-mobile is-centered">
+          <div class="column">
+            <p class="subtitle">Order Status</p>
+          </div>
+          <div class="column has-text-right ">
+            <a class="button is-rounded is-small">White</a>
+          </div>
+        </div>
+      </div>
+      <div id="container_hori2" style="min-width: 310px; max-width: 800px; height: 400px; margin: 0 auto"></div>
+    </div>
+  </div>
