--- a/src/app/layouts/master-layout/topnav/topnav.component.html
+++ b/src/app/layouts/master-layout/topnav/topnav.component.html
@@ -37,7 +37,9 @@
 
               <div class="dropdown is-hoverable is-right" style="margin-right: -10px;">
                   <div class="dropdown-trigger">
-                      <button class="button" style="border-style: none;" aria-haspopup="true"
+                      <button class="button" style="    border-style: none;
+                      background-color: #f0f0f0;
+                      margin-top: 4px" aria-haspopup="true"
                           aria-controls="dropdown-menu4">
                           <span>Shrikant Gond</span>
                           <!-- <span class="icon is-small">
