--- a/src/app/modules/customers/pages/customer-profile/customer-profile.component.scss
+++ b/src/app/modules/customers/pages/customer-profile/customer-profile.component.scss
@@ -17,39 +17,22 @@
     margin-top:-8px;
 }
 
-.box{
-    box-shadow: 0px 3px 6px rgba(10,10,10,.1), 0 0 0 0px rgba(10,10,10,.1);
-    -webkit-transition: .2s ease-in;
-    -moz-transition:  .2s ease-in;
-    transition:  .2s ease-in;
-}
-
-.box:hover{
-    box-shadow: 10px 10px 10px rgba(10,10,10,.1), 0 0 0 0px rgba(10,10,10,.1);
-}
-
 .card-content{
     padding: 1rem;
 }
 
-.column{
-    padding: .5rem;
-}
-
 .card{
     min-width:375px;
-    cursor: pointer;
+    // cursor: pointer;
     border-radius: 6px;
     box-shadow:  0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0px rgba(10, 10, 10, 0.1);
-    -webkit-transition: .2s ease-in;
-    -moz-transition:  .2s ease-in;
-    transition:  .2s ease-in;
+    margin-bottom: 32px;
 }
 
-.card:hover{
-    box-shadow: 10px 10px 10px rgba(10,10,10,.1), 0 0 0 0px rgba(10,10,10,.1);
-}
+// .card:hover{
+//     box-shadow: 10px 10px 10px rgba(10,10,10,.1), 0 0 0 0px rgba(10,10,10,.1);
+// }
 
 .media-content{
-    overflow: visible;
+    overflow: hidden;
 }
