--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,15 @@ $dark: #444;
 body {
   font-weight: 100;
   background: #f0f0f0;
+  font-size: .9rem;
+}
+
+.subtitle.is-6{
+  font-size: .9rem;
+}
+
+html{
+  background: #f0f0f0;
 }
 
 .uppercase {
@@ -21,10 +30,15 @@ body {
 
 .box {
   padding: 1.05rem;
+  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 0px rgba(10, 10, 10, 0.1)
 }
 
 .subtitle {
   line-height: 1;
   font-weight: 100;
   font-size: 1.10rem;
+}
+
+.content ul{
+  list-style: none;
 }
