basic pages added with ui change

--- a/src/app/modules/app-orders/pages/app-orders/app-orders.component.html
+++ b/src/app/modules/app-orders/pages/app-orders/app-orders.component.html
@@ -1,3 +1,35 @@
-<p>
-  app-orders works!
-</p>
+<div class="tabs">
+  <ul>
+      <li class="is-active"><a>All Tables</a></li>
+      <li><a>Available</a></li>
+      <li><a>Occupied</a></li>
+      <li><a>Take Away</a></li>
+      <li><a>Third Party</a></li>
+      <li><a>Corporate</a></li>
+  </ul>
+</div>
+
+<div class="columns is-1 is-mobile is-centered is-multiline">
+  <div class="column">
+    <app-round-table></app-round-table>
+  </div>
+  <div class="column">
+    <app-round-table></app-round-table>
+  </div>
+  <div class="column">
+    <app-round-table></app-round-table>
+  </div>
+  <div class="column">
+    <app-round-table></app-round-table>
+  </div>
+  <div class="column">
+    <app-round-table></app-round-table>
+  </div>
+  <div class="column">
+    <app-square-table></app-square-table>
+  </div>
+  <div class="column">
+    <app-square-table></app-square-table>
+  </div>
+</div>
+ 
