--- a/src/app/modules/app-menus/pages/app-menus/app-menus.component.html
+++ b/src/app/modules/app-menus/pages/app-menus/app-menus.component.html
@@ -1,3 +1,93 @@
-<p>
-  app-menus works!
-</p>
+<div class="box">
+  <div class="content">
+    <div class="heading">
+      <div class="columns">
+        <div class="column is-one-third">
+          <p class="subtitle">Menu List</p>
+        </div>
+        <div class="column">
+          <div class="columns">
+            <div class="column">
+              <div class="field">
+                <p class="control has-icons-left">
+                  <input class="input is-small is-rounded" type="password" placeholder="Ingredient">
+                  <span class="icon is-small is-left">                    
+                    <fa-icon icon="search"></fa-icon> 
+                  </span>
+                </p>
+              </div>
+            </div>
+            <div class="column is-narrow">
+              <a class="button is-small is-rounded">
+                Search
+              </a>
+            </div>
+            <div class="column is-narrow">
+              <a class="button is-small is-rounded">
+                Add Menu
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <table class="table is-hoverable is-fullwidth">
+      <thead>
+        <tr>
+          <th>Title</th>
+          <th class="is-hidden-mobile">Type</th>
+          <th>Price</th>
+          <th>Quantity</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr [routerLink]="['menu-details']" routerLinkActive="router-link-active" >
+          <td>Nimbu Pani</td>
+          <td class="is-hidden-mobile">Cold Beverages</td>
+          <td>20</td>
+          <td><progress class="progress is-danger" value="25" max="100">45%</progress></td>
+        </tr>
+        <tr>
+          <td>Nimbu Pani</td>
+          <td class="is-hidden-mobile">Cold Beverages</td>
+          <td>20</td>
+          <td><progress class="progress is-danger" value="25" max="100">45%</progress></td>
+        </tr>
+        <tr>
+          <td>Nimbu Pani</td>
+          <td class="is-hidden-mobile">Cold Beverages</td>
+          <td>20</td>
+          <td><progress class="progress is-danger" value="25" max="100">45%</progress></td>
+        </tr>
+        <tr>
+          <td>Nimbu Pani</td>
+          <td class="is-hidden-mobile">Cold Beverages</td>
+          <td>20</td>
+          <td><progress class="progress is-danger" value="25" max="100">45%</progress></td>
+        </tr>
+
+        <tr>
+          <td>Nimbu Pani</td>
+          <td class="is-hidden-mobile">Cold Beverages</td>
+          <td>20</td>
+          <td><progress class="progress is-danger" value="25" max="100">45%</progress></td>
+        </tr>
+
+
+      </tbody>
+    </table>
+
+    <nav class="pagination is-rounded is-small" role="navigation" aria-label="pagination">
+      <a class="pagination-previous">Previous</a>
+      <a class="pagination-next">Next page</a>
+      <ul class="pagination-list" style="margin-top:-.5rem;">
+        <li><a class="pagination-link" aria-label="Goto page 1">1</a></li>
+        <li><span class="pagination-ellipsis">&hellip;</span></li>
+        <li><a class="pagination-link is-current" aria-label="Page 46" aria-current="page">46</a></li>
+      </ul>
+    </nav>
+
+  </div>
+</div>
