--- a/src/app/layouts/master-layout/topnav/topnav.component.html
+++ b/src/app/layouts/master-layout/topnav/topnav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar is-fixed-top has-shadow" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
       <!-- <a class="navbar-item" href="#">
           <img src="Ico.jpg" width="112" height="40">
@@ -38,7 +38,6 @@
               <div class="dropdown is-hoverable is-right" style="margin-right: -10px;">
                   <div class="dropdown-trigger">
                       <button class="button" style="    border-style: none;
-                      background-color: #f0f0f0;
                       margin-top: 4px" aria-haspopup="true"
                           aria-controls="dropdown-menu4">
                           <span>Shrikant Gond</span>
