--- a/src/app/modules/app-menus/pages/menu-details/menu-details.component.html
+++ b/src/app/modules/app-menus/pages/menu-details/menu-details.component.html
@@ -129,7 +129,7 @@
                                         <input class="input is-small is-rounded" type="password"
                                             placeholder="Ingredient">
                                         <span class="icon is-small is-left">
-                                            <i class="fas fa-search"></i>
+                                            <fa-icon icon="search"></fa-icon> 
                                         </span>
                                     </p>
                                 </div>
