--- a/src/app/modules/app-orders/pages/app-order/app-order.component.html
+++ b/src/app/modules/app-orders/pages/app-order/app-order.component.html
@@ -6,7 +6,7 @@
           <p class="control has-icons-left">
               <input class="input is-small is-rounded" type="password" placeholder="Search Menu Item">
               <span class="icon is-small is-left">
-                  <i class="fas fa-search"></i>
+                <fa-icon icon="search"></fa-icon> 
               </span>
           </p>
       </div>
