--- a/src/app/modules/bills/pages/bills/bills.component.html
+++ b/src/app/modules/bills/pages/bills/bills.component.html
@@ -6,7 +6,7 @@
           <p class="control has-icons-left">
               <input class="input is-rounded is-small" type="text" placeholder="Search Menu Item">
               <span class="icon is-small is-left">
-                  <i class="fas fa-search"></i>
+                  <fa-icon icon="search"></fa-icon> 
               </span>
           </p>
       </div>
@@ -23,7 +23,7 @@
                   <input class="input is-rounded is-small" style="padding-left:2.5rem;" type="password"
                       placeholder="From Date">
                   <span class="icon is-small is-left">
-                      <i class="fas fa-calendar-alt"></i>
+                      <fa-icon icon="calendar-alt"></fa-icon>
                   </span>
               </p>
           </div>
@@ -32,7 +32,7 @@
                   <input class="input is-rounded is-small" style="padding-left:2.5rem;" type="password"
                       placeholder="To Date">
                   <span class="icon is-small is-left">
-                      <i class="fas fa-calendar-alt"></i>
+                      <fa-icon icon="calendar-alt"></fa-icon>
                   </span>
               </p>
           </div>
