--- a/src/app/modules/dashboard/pages/inventory-status/inventory-status.component.html
+++ b/src/app/modules/dashboard/pages/inventory-status/inventory-status.component.html
@@ -54,7 +54,7 @@
         </tbody>
       </table>
 
-      <nav class="pagination is-rounded" role="navigation" aria-label="pagination">
+      <nav class="pagination is-rounded is-small" role="navigation" aria-label="pagination">
         <a class="pagination-previous">Previous</a>
         <a class="pagination-next">Next page</a>
         <ul class="pagination-list" style="margin-top:-.5rem;">
