--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 // Set your brand colors 
-$primary: #8a4d76;
-$info: #fa7c91;
-$success: #757763;
+$primary: #3F51B5;
+$info: #FFDD00;
+$success: #11D625;
 $warning: yellow;
-$danger: red;
+$danger: #B92D00;
 $light: #ccc;
 $dark: #444;
 
