--- a/src/app/modules/inventory/pages/inventory-list/inventory-list.component.html
+++ b/src/app/modules/inventory/pages/inventory-list/inventory-list.component.html
@@ -12,7 +12,7 @@
                 <p class="control has-icons-left">
                   <input class="input is-small is-rounded" type="password" placeholder="Ingredient">
                   <span class="icon is-small is-left">
-                    <i class="fas fa-search"></i>
+                    <fa-icon icon="search"></fa-icon> 
                   </span>
                 </p>
               </div>
