breadcrumbs and Orders UI changes

--- a/src/app/layouts/master-layout/master-layout.component.html
+++ b/src/app/layouts/master-layout/master-layout.component.html
@@ -1,5 +1,5 @@
 <div class="columns">
-  <div class="column is-1 is-hidden-mobile" style="z-index:1000;width: 75px;">
+  <div class="column is-1 is-visible-sidenav" style="z-index:1000;width: 75px;">
 
     <app-sidenav></app-sidenav>
 
