--- a/src/app/modules/app-orders/pages/app-orders/app-orders.component.html
+++ b/src/app/modules/app-orders/pages/app-orders/app-orders.component.html
@@ -11,25 +11,26 @@
 
 <div class="columns is-1 is-mobile is-centered is-multiline">
   <div class="column">
-    <app-round-table></app-round-table>
+    <app-round-table table-no="1" table-bill="R 73" order-time="04:10" ></app-round-table>
   </div>
   <div class="column">
-    <app-round-table></app-round-table>
+    <app-round-table table-no="2"></app-round-table>
   </div>
   <div class="column">
-    <app-round-table></app-round-table>
+    <app-square-table table-no="3" table-bill="R 1723" order-time="18:05"></app-square-table>
   </div>
   <div class="column">
-    <app-round-table></app-round-table>
+    <app-round-table table-no="4" table-bill="R 8" order-time="00:20"></app-round-table>
   </div>
   <div class="column">
-    <app-round-table></app-round-table>
+    <app-square-table table-no="5"></app-square-table>
   </div>
   <div class="column">
-    <app-square-table></app-square-table>
+    <app-square-table table-bill="R 8"></app-square-table>
   </div>
   <div class="column">
-    <app-square-table></app-square-table>
+    <app-square-table order-time="00:20"></app-square-table>
   </div>
+  
 </div>
  
