--- a/src/app/modules/app-orders/pages/round-table/round-table.component.html
+++ b/src/app/modules/app-orders/pages/round-table/round-table.component.html
@@ -1,10 +1,5 @@
-<div [routerLink]="['order']" style="cursor:pointer" routerLinkActive="router-link-active" >
-  <span class="hchair top_chair"></span>
-  <span class="vchair left_chair"></span>
-  <div class="circle"></div>
-  <span class="vchair right_chair"></span>
-  <span class="hchair bottom_chair"></span>
-  <div class="order_time">06:10</div>
-  <div class="table_no">4</div>
-  <div class="table_bill">R 40</div>
+<div class="table_round" [routerLink]="['order']" style="cursor:pointer" routerLinkActive="router-link-active">      
+  <div class="order_time" [ngClass]="{'white': order_time==='un'}">{{order_time}}</div>  
+  <div class="table_no" [ngClass]="{'white': table_no==='un'}">{{table_no}}</div>  
+  <div class="table_bill" [ngClass]="{'white': table_bill==='un'}">{{table_bill}}</div>                
 </div>
