--- a/src/app/modules/dashboard/pages/order-chart/order-chart.component.html
+++ b/src/app/modules/dashboard/pages/order-chart/order-chart.component.html
@@ -11,6 +11,18 @@
           </div>
         </div>
       </div>
-      <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+      
+      <highcharts-chart 
+          [Highcharts]="Highcharts"  
+          [constructorType]="chartConstructor"
+          [options]="chartOptions"
+          [callbackFunction]="chartCallback"
+
+          [(update)]="updateFlag"
+          [oneToOne]="oneToOneFlag"
+          [runOutsideAngular]="false" 
+          style="width: 100%; height: 400px; display: block;"
+        ></highcharts-chart>
+
     </div>
   </div>
