--- a/src/app/modules/dashboard/pages/sale-status-chart/sale-status-chart.component.html
+++ b/src/app/modules/dashboard/pages/sale-status-chart/sale-status-chart.component.html
@@ -1,3 +1,11 @@
-<p>
-  sale-status-chart works!
-</p>
+<highcharts-chart 
+          [Highcharts]="Highcharts"   
+          [constructorType]="chartConstructor"
+          [options]="chartOptions"
+          [callbackFunction]="chartCallback"
+
+          [(update)]="updateFlag"
+          [oneToOne]="oneToOneFlag"
+          [runOutsideAngular]="false" 
+          style="width: 100%; height: 400px; display: block;"
+        ></highcharts-chart>
